--- a/application.html
+++ b/application.html
@@ -270,7 +270,7 @@
                 <div class="bg-fiu-navy text-white p-8 rounded-lg text-center">
                     <div class="text-3xl font-bold mb-2">$6,000</div>
                     <h3 class="text-lg font-semibold mb-2">Research Stipend</h3>
-                    <p class="text-sm opacity-90">Tax-free research allowance for 10 weeks</p>
+                    <p class="text-sm opacity-90">Research stipend for 10 weeks</p>
                 </div>
                 
                 <div class="bg-fiu-gold text-fiu-navy p-8 rounded-lg text-center">
@@ -441,7 +441,7 @@
                 </div>
             </div>
             <div class="border-t border-gray-700 mt-8 pt-8 text-center text-gray-300">
-                <p>&copy; 2024 Florida International University. All rights reserved. | This material is based upon work supported by the National Science Foundation.</p>
+                <p>&copy; 2025 Florida International University. All rights reserved. | This material is based upon work supported by the National Science Foundation.</p>
             </div>
         </div>
     </footer>
