--- a/contact.html
+++ b/contact.html
@@ -87,8 +87,7 @@
                         <h3 class="text-xl font-bold text-fiu-navy mb-4">Program Administrator</h3>
                         <div class="flex items-start">
                             <img src="PISSINOU.jpg" 
-                                 alt="Dr. Nikki Pissinou" 
-                                 class="w-20 h-20 rounded-full object-cover object-center object-top mr-4">
+                                 alt="Dr. Nikki Pissinou" class="w-20 h-20 rounded-full mr-4 object-cover">
                             <div>
                                 <h4 class="text-lg font-semibold text-fiu-navy">Dr. Nikki Pissinou</h4>
                                 <p class="text-fiu-gold font-medium mb-2">Professor, School of Computing and Information Sciences</p>
@@ -364,7 +363,7 @@
                 </div>
             </div>
             <div class="border-t border-gray-700 mt-8 pt-8 text-center text-gray-300">
-                <p>&copy; 2024 Florida International University. All rights reserved. | This material is based upon work supported by the National Science Foundation.</p>
+                <p>&copy; 2025 Florida International University. All rights reserved. | This material is based upon work supported by the National Science Foundation.</p>
             </div>
         </div>
     </footer>
