--- a/faculty.html
+++ b/faculty.html
@@ -168,9 +168,6 @@
                             <a href="#" class="hover:text-fiu-gold transition-colors">
                                 <i class="fas fa-globe"></i>
                             </a>
-                            <a href="#" class="hover:text-fiu-gold transition-colors">
-                                <i class="fab fa-linkedin"></i>
-                            </a>
                         </div>
                     </div>
                 </div>
@@ -233,16 +230,13 @@
                             <a href="#" class="hover:text-fiu-gold transition-colors">
                                 <i class="fas fa-globe"></i>
                             </a>
-                            <a href="#" class="hover:text-fiu-gold transition-colors">
-                                <i class="fab fa-linkedin"></i>
-                            </a>
                         </div>
                     </div>
                 </div>
 
                 <!-- Faculty Member 6 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition-shadow">
-                    <img src="kianoosh.webp" 
+                    <img src="kianoosh.jpg" 
                          alt="Dr. Kianoosh Boroojeni" class="w-full h-64 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-bold text-fiu-navy mb-2">Dr. Kianoosh Boroojeni</h3>
@@ -384,7 +378,7 @@
                 </div>
             </div>
             <div class="border-t border-gray-700 mt-8 pt-8 text-center text-gray-300">
-                <p>&copy; 2024 Florida International University. All rights reserved. | This material is based upon work supported by the National Science Foundation and the Department of Defense.</p>
+                <p>&copy; 2025 Florida International University. All rights reserved. | This material is based upon work supported by the National Science Foundation and the Department of Defense.</p>
             </div>
         </div>
     </footer>
