--- a/about.html
+++ b/about.html
@@ -106,18 +106,39 @@
                 <div>
                     <h2 class="text-3xl font-bold text-fiu-navy mb-6">Program Description</h2>
                     <p class="text-lg text-gray-700 mb-6">
-                        The NSF and DOD sponsored REU ASSET program at Florida International University is a prestigious 
-                        10-week summer research program designed to provide undergraduate students with intensive research 
-                        experience in cutting-edge areas of advanced sensor technologies, cybersecurity, IoT systems, and emerging technologies.
+                        What is REU? 
+                        The Research Experience for Undergraduates (REU) site at Florida International University (FIU) 
+                        provides research experience to undergraduate students during a 10 week summer program. Surf the 
+                        wave with ASSET Research! The research projects during the summer program will be centered around 
+                        the theme of Advanced Secured Sensor Enabling Technologies (ASSET). Students will improve the understanding 
+                        of the nature of research practice and scientific reasoning and learn the process of conducting research and 
+                        hands-on knowledge of applied and basic research.
                     </p>
                     <p class="text-lg text-gray-700 mb-6">
-                        Our program brings together talented undergraduate students from across the nation to work alongside 
-                        world-class faculty researchers in state-of-the-art laboratories. Participants engage in original 
-                        research projects that contribute to advancing knowledge in sensor security, data privacy, and next-generation sensing technologies.
+                        Why REU at FIU?
+                        There are several reasons to apply to the REU program at FIU:
+
+                        Students will be paid $7,000 for doing some cutting-edge research!
+                        Also $120 per week will be provided for meal expenses!!
+                        Out-of-town students are provided with housing and travel expenses.
+                        Students will work on cutting-edge research in the area of Advanced Secured Sensor Enabling Technologies (ASSET), in team-oriented projects where each student gets to learn from his or her team-mates and building critical social interaction and communication skills.
+                        Provide students with a collegial partnership experience with faculty and peers.
+                        Improve oral and written comprehension and communication of technical knowledge.
+                        Spark an interest in continuing relevant research in graduate.
+                        And of course, students will spend a summer in Miami with its excellent beaches and warm waters!
                     </p>
                     <p class="text-lg text-gray-700">
-                        Located in the vibrant city of Miami, FIU provides an ideal environment for research and learning, 
-                        with access to cutting-edge facilities and a diverse, international community of scholars.
+                        Nature of Activities for Minority Students:
+
+                        Active Learners as Members of a Research Community
+                        Workshops and Seminars
+                        Heuristics in Picking up Specific Research Skills
+                        How to apply and Succeed in Graduate School
+                        Technical & Professional Seminars
+                        Weekly Invited Talks on Emerging Research
+                        Journal Club
+                        Faculty and Peer Mentoring
+                        Recreation and Social Activities
                     </p>
                 </div>
                 <div>
@@ -271,7 +292,7 @@
                     <ul class="space-y-4">
                         <li class="flex items-center">
                             <i class="fas fa-dollar-sign text-fiu-gold mr-3"></i>
-                            <span>$6,000 research stipend</span>
+                            <span>$7,000 research stipend</span>
                         </li>
                         <li class="flex items-center">
                             <i class="fas fa-home text-fiu-gold mr-3"></i>
