--- a/faculty.html
+++ b/faculty.html
@@ -123,29 +123,30 @@
 
                 <!-- Faculty Member 2 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition-shadow">
-                    <img src="S-S-Iyengar-e1646762366279.jpg" 
-                         alt="Dr. S.S. Iyengar" class="w-full h-64 object-cover">
+                    <img src="2017-09-08-Deng-Pan.jpg" 
+                         alt="Dr. Deng Pan" class="w-full h-64 object-cover">
                     <div class="p-6">
-                        <h3 class="text-xl font-bold text-fiu-navy mb-2">Dr. S.S. Iyengar</h3>
-                        <p class="text-fiu-gold font-semibold mb-3">Ryder Professor and Director, School of Computing and Information Sciences</p>
+                        <h3 class="text-xl font-bold text-fiu-navy mb-2">Dr. Deng Pan</h3>
+                        <p class="text-fiu-gold font-semibold mb-3">Professor, School of Computing and Information Sciences</p>
                         <p class="text-gray-700 mb-4">
-                            Dr. S.S. Iyengar is an internationally recognized computer scientist and the Ryder Professor at Florida International University, 
-                            known for pioneering work in high-performance algorithms, sensor fusion, and intelligent systems. With decades of impactful research funded by 
-                            major agencies like NSF, DARPA, and NASA, his innovations have influenced academia, industry, and national laboratories worldwide. 
+                            Dr. Deng Pan received his Ph.D. in computer science from SUNY Stony Brook in 2007. His research focuses on 
+                            high-speed networking, including network function virtualization, data center networks, and energy-efficient systems. 
+                            He has published over fifty peer-reviewed papers and served on technical committees for major conferences 
+                            like IEEE INFOCOM, GLOBECOM, and ICPP. 
                         </p>
                         <div class="mb-4">
                             <h4 class="font-semibold text-fiu-navy mb-2">Research Interests:</h4>
                             <div class="flex flex-wrap gap-2">
-                                <span class="bg-fiu-navy text-white px-2 py-1 rounded text-sm">High-Performance Computing</span>
-                                <span class="bg-fiu-navy text-white px-2 py-1 rounded text-sm">Sensor Fusion & Intelligent Systems</span>
-                                <span class="bg-fiu-navy text-white px-2 py-1 rounded text-sm">Biomedical & Autonomous Systems</span>
+                                <span class="bg-fiu-navy text-white px-2 py-1 rounded text-sm">High-speed networking</span>
+                                <span class="bg-fiu-navy text-white px-2 py-1 rounded text-sm">Network Function Virtualization (NFV)</span>
+                                <span class="bg-fiu-navy text-white px-2 py-1 rounded text-sm">Energy-Efficient and Data Center Networking</span>
                             </div>
                         </div>
                         <div class="flex items-center space-x-3 text-gray-600">
                             <a href="mailto:iyengar@cis.fiu.edu" class="hover:text-fiu-gold transition-colors">
                                 <i class="fas fa-envelope"></i>
                             </a>
-                            <a href="https://www.cis.fiu.edu/faculty-staff/s-s-iyengar/" class="hover:text-fiu-gold transition-colors" target="_blank">
+                            <a href="https://www.cis.fiu.edu/faculty-staff/deng-pan/" class="hover:text-fiu-gold transition-colors" target="_blank">
                                 <i class="fas fa-globe"></i>
                             </a>
                         </div>
@@ -154,22 +155,24 @@
 
                 <!-- Faculty Member 3 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition-shadow">
-                    <img src="afanasyev.jpg" 
+                    <img src="XuyuWang.png" 
                          alt="Dr. Nagarajan Prabakar" class="w-full h-64 object-cover">
                     <div class="p-6">
-                        <h3 class="text-xl font-bold text-fiu-navy mb-2">Dr. Alexander Afanasyev</h3>
+                        <h3 class="text-xl font-bold text-fiu-navy mb-2">Dr. Xuyu Wang</h3>
                         <p class="text-fiu-gold font-semibold mb-3">Associate Professor, School of Computing and Information Sciences</p>
                         <p class="text-gray-700 mb-4">
-                            Dr. Afanasyev is an Assistant Professor at FIU specializing in next-generation Internet architecture, particularly 
-                            through his work on Named Data Networking (NDN). His research focuses on scalable routing, security, and applying 
-                            Information-Centric Networking to IoT systems, aiming to enable secure, seamless communication between applications and devices.
+                            Dr. Xuyu Wang is an Assistant Professor at FIU's Knight Foundation School of Computing and Information Sciences. 
+                            He received his Ph.D. from Auburn University in 2018 and previously taught at California State University, Sacramento. 
+                            His research focuses on wireless sensing, IoT, and smart health. He is a recipient of the NSF CRII Award and multiple best 
+                            paper/demo awards from IEEE conferences. Dr. Wang has organized tutorials and sessions at major conferences and serves as 
+                            an editor for leading journals.
                         </p>
                         <div class="mb-4">
                             <h4 class="font-semibold text-fiu-navy mb-2">Research Interests:</h4>
                             <div class="flex flex-wrap gap-2">
-                                <span class="bg-fiu-navy text-white px-2 py-1 rounded text-sm">Named Data Networking (NDN)</span>
-                                <span class="bg-fiu-navy text-white px-2 py-1 rounded text-sm">Information-Centric Networking (ICN)</span>
-                                <span class="bg-fiu-navy text-white px-2 py-1 rounded text-sm">oT Security & Connectivity</span>
+                                <span class="bg-fiu-navy text-white px-2 py-1 rounded text-sm">Wireless Sensing & Localization</span>
+                                <span class="bg-fiu-navy text-white px-2 py-1 rounded text-sm">nternet of Things (IoT)</span>
+                                <span class="bg-fiu-navy text-white px-2 py-1 rounded text-sm">AI-Enabled Smart Health Systems</span>
                             </div>
                         </div>
                         <div class="flex items-center space-x-3 text-gray-600">
