--- a/research.html
+++ b/research.html
@@ -89,8 +89,8 @@
             <div class="text-center mb-12">
                 <h2 class="text-3xl md:text-4xl font-bold text-fiu-navy mb-4">Research Focus Areas</h2>
                 <p class="text-xl text-gray-700 max-w-4xl mx-auto">
-                    Our REU ASSET program offers diverse research opportunities across five major themes in advanced sensor technologies, 
-                    cybersecurity, and emerging technologies. Students work on cutting-edge projects that address real-world challenges for both civilian and defense applications.
+                    <strong>Because research is dynamic and continually evolving, project topics may change; students
+                    are encouraged to visit participating faculty websites to learn about their most current research directions.</strong>
                 </p>
             </div>
         </div>
