--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         <i class="fas fa-dollar-sign text-2xl"></i>
                     </div>
                     <h3 class="text-xl font-bold text-fiu-navy mb-2">Stipend</h3>
-                    <p class="text-gray-700">$6,000 stipend<br>+ Housing + Travel</p>
+                                            <p class="text-gray-700">$7,000 stipend<br>+ Housing + Travel</p>
                 </div>
             </div>
         </div>
@@ -156,13 +156,12 @@
                 <div>
                     <h2 class="text-3xl md:text-4xl font-bold text-fiu-navy mb-6">About Our REU Program</h2>
                     <p class="text-lg text-gray-700 mb-6">
-                        The REU ASSET program at FIU provides undergraduate students with hands-on research experience 
-                        in cutting-edge areas of advanced sensor technologies, cybersecurity, IoT systems, and emerging technologies. Our program combines theoretical 
-                        foundations with practical applications in state-of-the-art laboratories.
-                    </p>
-                    <p class="text-lg text-gray-700 mb-6">
-                        Students work closely with renowned faculty mentors on projects that address real-world challenges in sensor security, 
-                        data privacy, wireless systems, and next-generation sensing technologies funded by NSF and DOD.
+                        The Research Experience for Undergraduates (REU) site at Florida International University (FIU) 
+                        provides research experience to undergraduate students during a 10 week summer program. Surf the 
+                        wave with ASSET Research! The research projects during the summer program will be centered around 
+                        the theme of Advanced Secured Sensor Enabling Technologies (ASSET). Students will improve the understanding 
+                        of the nature of research practice and scientific reasoning and learn the process of conducting research and 
+                        hands-on knowledge of applied and basic research.
                     </p>
                     <ul class="text-lg text-gray-700 space-y-2">
                         <li class="flex items-center"><i class="fas fa-check text-fiu-gold mr-3"></i>Hands-on research experience</li>
