--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
                 <div>
                     <h2 class="text-3xl font-bold text-fiu-navy mb-6">Program Description</h2>
                     <p class="text-lg text-gray-700 mb-6">
-                        What is REU? 
+                        <strong>What is REU?</strong> 
                         The Research Experience for Undergraduates (REU) site at Florida International University (FIU) 
                         provides research experience to undergraduate students during a 10 week summer program. Surf the 
                         wave with ASSET Research! The research projects during the summer program will be centered around 
@@ -115,9 +115,8 @@
                         hands-on knowledge of applied and basic research.
                     </p>
                     <p class="text-lg text-gray-700 mb-6">
-                        Why REU at FIU?
+                        <strong>Why REU at FIU?</strong>
                         There are several reasons to apply to the REU program at FIU:
-
                         Students will be paid $7,000 for doing some cutting-edge research!
                         Also $120 per week will be provided for meal expenses!!
                         Out-of-town students are provided with housing and travel expenses.
@@ -128,7 +127,7 @@
                         And of course, students will spend a summer in Miami with its excellent beaches and warm waters!
                     </p>
                     <p class="text-lg text-gray-700">
-                        Nature of Activities for Minority Students:
+                        <strong>Nature of Activities for Minority Students:</strong>
 
                         Active Learners as Members of a Research Community
                         Workshops and Seminars
