--- a/about.html
+++ b/about.html
@@ -115,30 +115,33 @@
                         hands-on knowledge of applied and basic research.
                     </p>
                     <p class="text-lg text-gray-700 mb-6">
-                        <strong>Why REU at FIU?</strong>
+                        <strong> Why REU at FIU?</strong>
                         There are several reasons to apply to the REU program at FIU:
-                        Students will be paid $7,000 for doing some cutting-edge research!
-                        Also $120 per week will be provided for meal expenses!!
-                        Out-of-town students are provided with housing and travel expenses.
-                        Students will work on cutting-edge research in the area of Advanced Secured Sensor Enabling Technologies (ASSET), in team-oriented projects where each student gets to learn from his or her team-mates and building critical social interaction and communication skills.
-                        Provide students with a collegial partnership experience with faculty and peers.
-                        Improve oral and written comprehension and communication of technical knowledge.
-                        Spark an interest in continuing relevant research in graduate.
-                        And of course, students will spend a summer in Miami with its excellent beaches and warm waters!
                     </p>
+                    <ul class="text-lg text-gray-700 mb-6 list-disc pl-6">
+                        <li>Students will be paid $7,000 for doing some cutting-edge research!</li>
+                        <li>Also $120 per week will be provided for meal expenses!!</li>
+                        <li>Out-of-town students are provided with housing and travel expenses.</li>
+                        <li>Students will work on cutting-edge research in the area of Advanced Secured Sensor Enabling Technologies (ASSET), in team-oriented projects where each student gets to learn from his or her team-mates and building critical social interaction and communication skills.</li>
+                        <li>Provide students with a collegial partnership experience with faculty and peers.</li>
+                        <li>Improve oral and written comprehension and communication of technical knowledge.</li>
+                        <li>Spark an interest in continuing relevant research in graduate.</li>
+                        <li>And of course, students will spend a summer in Miami with its excellent beaches and warm waters!</li>
+                    </ul>
                     <p class="text-lg text-gray-700">
                         <strong>Nature of Activities for Minority Students:</strong>
-
-                        Active Learners as Members of a Research Community
-                        Workshops and Seminars
-                        Heuristics in Picking up Specific Research Skills
-                        How to apply and Succeed in Graduate School
-                        Technical & Professional Seminars
-                        Weekly Invited Talks on Emerging Research
-                        Journal Club
-                        Faculty and Peer Mentoring
-                        Recreation and Social Activities
                     </p>
+                    <ul class="text-lg text-gray-700 list-disc pl-6">
+                    Active Learners as Members of a Research Community:
+                        <li>Workshops and Seminars</li>
+                        <li>Heuristics in Picking up Specific Research Skills</li>
+                        <li>How to apply and Succeed in Graduate School</li>
+                        <li>Technical & Professional Seminars</li>
+                        <li>Weekly Invited Talks on Emerging Research</li>
+                        <li>Journal Club</li>
+                        <li>Faculty and Peer Mentoring</li>
+                        <li>Recreation and Social Activities</li>
+                    </ul>
                 </div>
                 <div>
                     <img src="engineering.jpg" 
@@ -290,32 +293,46 @@
                     <h3 class="text-2xl font-bold mb-6">What We Provide</h3>
                     <ul class="space-y-4">
                         <li class="flex items-center">
-                            <i class="fas fa-dollar-sign text-fiu-gold mr-3"></i>
-                            <span>$7,000 research stipend</span>
+                            <div class="w-6 text-center">
+                                <i class="fas fa-dollar-sign text-fiu-gold"></i>
+                            </div>
+                            <span class="ml-3">$7,000 research stipend</span>
                         </li>
                         <li class="flex items-center">
-                            <i class="fas fa-home text-fiu-gold mr-3"></i>
-                            <span>On-campus housing (shared dormitory)</span>
+                            <div class="w-6 text-center">
+                                <i class="fas fa-home text-fiu-gold"></i>
+                            </div>
+                            <span class="ml-3">On-campus housing (shared dormitory)</span>
                         </li>
                         <li class="flex items-center">
-                            <i class="fas fa-utensils text-fiu-gold mr-3"></i>
-                            <span>Meal allowance</span>
+                            <div class="w-6 text-center">
+                                <i class="fas fa-utensils text-fiu-gold"></i>
+                            </div>
+                            <span class="ml-3">Meal allowance</span>
                         </li>
                         <li class="flex items-center">
-                            <i class="fas fa-plane text-fiu-gold mr-3"></i>
-                            <span>Travel support (up to $500)</span>
+                            <div class="w-6 text-center">
+                                <i class="fas fa-plane text-fiu-gold"></i>
+                            </div>
+                            <span class="ml-3">Travel support (up to $500)</span>
                         </li>
                         <li class="flex items-center">
-                            <i class="fas fa-laptop text-fiu-gold mr-3"></i>
-                            <span>Access to research facilities and equipment</span>
+                            <div class="w-6 text-center">
+                                <i class="fas fa-laptop text-fiu-gold"></i>
+                            </div>
+                            <span class="ml-3">Access to research facilities and equipment</span>
                         </li>
                         <li class="flex items-center">
-                            <i class="fas fa-certificate text-fiu-gold mr-3"></i>
-                            <span>Professional development workshops</span>
+                            <div class="w-6 text-center">
+                                <i class="fas fa-certificate text-fiu-gold"></i>
+                            </div>
+                            <span class="ml-3">Professional development workshops</span>
                         </li>
                         <li class="flex items-center">
-                            <i class="fas fa-presentation text-fiu-gold mr-3"></i>
-                            <span>Conference presentation opportunities</span>
+                            <div class="w-6 text-center">
+                                <i class="fas fa-chalkboard-teacher text-fiu-gold"></i>
+                            </div>
+                            <span class="ml-3">Conference presentation opportunities</span>
                         </li>
                     </ul>
                     
