--- a/application.html
+++ b/application.html
@@ -96,13 +96,13 @@
                     <div class="flex items-center p-6 bg-gray-50 rounded-lg">
                         <div class="bg-fiu-navy text-white w-20 h-20 rounded-full flex items-center justify-center mr-6">
                             <div class="text-center">
-                                <div class="font-bold text-sm">JAN</div>
-                                <div class="font-bold text-lg">15</div>
+                                <div class="font-bold text-sm">FEB</div>
+                                <div class="font-bold text-lg">18</div>
                             </div>
                         </div>
                         <div class="flex-1">
-                            <h3 class="text-xl font-bold text-fiu-navy mb-2">Application Deadline</h3>
-                            <p class="text-gray-700">All application materials must be submitted by 11:59 PM EST</p>
+                            <h3 class="text-xl font-bold text-fiu-navy mb-2">Early Action Application Submission Deadline</h3>
+                            <p class="text-gray-700">Early Action Application Submission Deadline</p>
                         </div>
                         <div class="text-fiu-gold font-bold">PRIORITY</div>
                     </div>
@@ -110,25 +110,25 @@
                     <div class="flex items-center p-6 bg-gray-50 rounded-lg">
                         <div class="bg-fiu-navy text-white w-20 h-20 rounded-full flex items-center justify-center mr-6">
                             <div class="text-center">
-                                <div class="font-bold text-sm">MAR</div>
-                                <div class="font-bold text-lg">1</div>
+                                <div class="font-bold text-sm">APR</div>
+                                <div class="font-bold text-lg">16</div>
                             </div>
                         </div>
                         <div class="flex-1">
-                            <h3 class="text-xl font-bold text-fiu-navy mb-2">Notification Date</h3>
-                            <p class="text-gray-700">Applicants will be notified of selection decisions</p>
+                            <h3 class="text-xl font-bold text-fiu-navy mb-2">Application Deadline</h3>
+                            <p class="text-gray-700">All application materials must be submitted by 11:59 PM EST</p>
                         </div>
                     </div>
                     
                     <div class="flex items-center p-6 bg-gray-50 rounded-lg">
                         <div class="bg-fiu-navy text-white w-20 h-20 rounded-full flex items-center justify-center mr-6">
                             <div class="text-center">
-                                <div class="font-bold text-sm">MAR</div>
-                                <div class="font-bold text-lg">15</div>
+                                <div class="font-bold text-sm">MAY</div>
+                                <div class="font-bold text-lg">4</div>
                             </div>
                         </div>
                         <div class="flex-1">
-                            <h3 class="text-xl font-bold text-fiu-navy mb-2">Acceptance Deadline</h3>
+                            <h3 class="text-xl font-bold text-fiu-navy mb-2">Regular Admission Offer</h3>
                             <p class="text-gray-700">Selected participants must confirm acceptance</p>
                         </div>
                     </div>
@@ -136,8 +136,8 @@
                     <div class="flex items-center p-6 bg-fiu-gold text-fiu-navy rounded-lg">
                         <div class="bg-fiu-navy text-white w-20 h-20 rounded-full flex items-center justify-center mr-6">
                             <div class="text-center">
-                                <div class="font-bold text-sm">JUN</div>
-                                <div class="font-bold text-lg">3</div>
+                                <div class="font-bold text-sm">MAY</div>
+                                <div class="font-bold text-lg">25</div>
                             </div>
                         </div>
                         <div class="flex-1">
@@ -285,7 +285,7 @@
                 </div>
                 
                 <div class="bg-fiu-gold text-fiu-navy p-8 rounded-lg text-center">
-                    <div class="text-3xl font-bold mb-2">$450</div>
+                    <div class="text-3xl font-bold mb-2">$500</div>
                     <h3 class="text-lg font-semibold mb-2">Travel Support</h3>
                     <p class="text-sm">Round-trip travel to Miami, FL</p>
                 </div>
@@ -400,7 +400,7 @@
                 </a>
             </div>
             <div class="mt-8 text-fiu-gold">
-                <p class="font-semibold">Application Deadline: January 15, 2025</p>
+                <p class="font-semibold">Application Deadline: April 16, 2025</p>
             </div>
         </div>
     </section>
