--- a/faculty.html
+++ b/faculty.html
@@ -179,7 +179,7 @@
                             <a href="mailto:prabakar@cis.fiu.edu" class="hover:text-fiu-gold transition-colors">
                                 <i class="fas fa-envelope"></i>
                             </a>
-                            <a href="#" class="hover:text-fiu-gold transition-colors">
+                            <a href="https://www.cis.fiu.edu/faculty-staff/xuyu-wang/" class="hover:text-fiu-gold transition-colors" target="_blank">
                                 <i class="fas fa-globe"></i>
                             </a>
                         </div>
@@ -241,7 +241,7 @@
                             <a href="mailto:marahman@fiu.edu" class="hover:text-fiu-gold transition-colors">
                                 <i class="fas fa-envelope"></i>
                             </a>
-                            <a href="#" class="hover:text-fiu-gold transition-colors">
+                            <a href="https://www.cis.fiu.edu/faculty-staff/leonardo-bobadilla/" class="hover:text-fiu-gold transition-colors" target="_blank">
                                 <i class="fas fa-globe"></i>
                             </a>
                         </div>
